--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tinyagents"
-version = "0.1.0"
+version = "1.1.0"
 description = "A tiny, lightweight and unintrusive library for orchestrating agentic applications."
 authors = ["Adam Hedib (adam-h-ds)"]
 license = "MIT"
@@ -10,6 +10,7 @@ repository = "https://github.com/adam-h-ds/tinyagents"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+ray = {extras = ["serve"], version = "^2.32.0"}
 
 
 [tool.poetry.group.dev.dependencies]
