--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,12 @@ homepage = "https://github.com/adam-h-ds/tinyagents"
 repository = "https://github.com/adam-h-ds/tinyagents"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 ray = {extras = ["serve"], version = "^2.32.0"}
+opentelemetry-api = "^1.26.0"
+opentelemetry-sdk = "^1.26.0"
+opentelemetry-exporter-otlp-proto-http = "^1.26.0"
+arize-phoenix = "^4.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
